set overflow to visible on refresh button (fixes #236, thanks @gluxon).

--- a/app/assets/css/application.scss
+++ b/app/assets/css/application.scss
@@ -405,6 +405,10 @@ table {
 		}
 	}
 
+	form {
+		overflow: visible;
+	}
+
 	hgroup {
 		padding: 1em 0;
 
